tests/fail/nightly/input_not_str.stderr
error[E0308]: mismatched types
<<<<<<< HEAD
 --> tests/fail/nightly/input_not_str.rs:2:21
=======
<<<<<<<< HEAD:tests/fail/stable/input_not_str.stderr
 --> tests/fail/stable/input_not_str.rs:2:21
========
 --> tests/fail/nightly/input_not_str.rs:2:21
>>>>>>>> a070ece (Fully fixed tests):tests/fail/nightly/input_not_str.stderr
>>>>>>> a070ece (Fully fixed tests)
  |
2 |     sscanf::sscanf!(5usize, "{}", usize);
  |     ----------------^^^^^^--------------
  |     |               |
  |     |               expected `&str`, found `&usize`
  |     arguments to this function are incorrect
  |
  = note: expected reference `&str`
             found reference `&usize`
note: method defined here
 --> $RUST/core/src/str/mod.rs
  |
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 94eed5e (tweaks to error messages)
  |     pub const fn get<I: [const] SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
  |                  ^^^

error[E0308]: mismatched types
 --> tests/fail/nightly/input_not_str.rs:3:21
=======
  |     pub const fn get<I: ~const SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
  |                  ^^^

error[E0308]: mismatched types
<<<<<<<< HEAD:tests/fail/stable/input_not_str.stderr
 --> tests/fail/stable/input_not_str.rs:3:21
========
 --> tests/fail/nightly/input_not_str.rs:3:21
>>>>>>>> a070ece (Fully fixed tests):tests/fail/nightly/input_not_str.stderr
>>>>>>> a070ece (Fully fixed tests)
  |
3 |     sscanf::sscanf!(b"5", "{}", usize);
  |     ----------------^^^^--------------
  |     |               |
  |     |               expected `&str`, found `&&[u8; 1]`
  |     arguments to this function are incorrect
  |
  = note: expected reference `&str`
             found reference `&&'static [u8; 1]`
note: method defined here
 --> $RUST/core/src/str/mod.rs
  |
<<<<<<< HEAD
<<<<<<< HEAD
  |     pub const fn get<I: [const] SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
=======
  |     pub const fn get<I: ~const SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
>>>>>>> a070ece (Fully fixed tests)
=======
  |     pub const fn get<I: [const] SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
>>>>>>> 94eed5e (tweaks to error messages)
  |                  ^^^
